# stm32l552ze

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config
src/: axis.rs  lib.rs
src/arm/: mod.rs
src/board/: l552ze.rs  mod.rs  nvic.rs
src/driver/: mod.rs  w5200.rs
src/example/: lib.rs
src/hal/: common.rs  gpio.rs  i2c.rs  mod.rs  nvic.rs  pointer.rs  rcc.rs  spi.rs  timer.rs  usart.rs
